--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,73 +8,60 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:22.04
 
     env:
-      ANDROID_HOME: /tmp/android-sdk
-      PATH: /tmp/android-sdk/cmdline-tools/latest/bin:/tmp/android-sdk/platform-tools:/home/runner/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+      ANDROID_HOME: /opt/android-sdk
+      PATH: /opt/android-sdk/cmdline-tools/latest/bin:/opt/android-sdk/platform-tools:/root/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
     steps:
-      - name: Checkout repository
+      - name: Install system dependencies
+        run: |
+          apt-get update
+          DEBIAN_FRONTEND=noninteractive apt-get install -y \
+            openjdk-11-jdk \
+            unzip \
+            wget \
+            git \
+            python3-pip \
+            python3-setuptools \
+            cython3 \
+            build-essential \
+            zip \
+            zlib1g-dev \
+            libncurses-dev \
+            libffi-dev \
+            bash \
+            curl \
+            coreutils
+
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install system dependencies
-        shell: bash
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y openjdk-11-jdk unzip wget python3-pip python3-setuptools git cython3 build-essential zip zlib1g-dev libncurses-dev libffi-dev coreutils bash
-
-      - name: Fix /bin/sh symlink to bash
-        shell: bash
-        run: |
-          if [ -f /bin/sh ]; then sudo rm /bin/sh; fi
-          sudo ln -s /bin/bash /bin/sh
-
-      - name: Upgrade pip and install Buildozer
-        shell: bash
+      - name: Install Buildozer
         run: |
           python3 -m pip install --upgrade pip setuptools wheel
-          python3 -m pip install --user --upgrade buildozer
+          python3 -m pip install --user buildozer
 
       - name: Download and install Android cmdline-tools
-        shell: bash
         run: |
           mkdir -p $ANDROID_HOME/cmdline-tools
           cd $ANDROID_HOME/cmdline-tools
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
           unzip -q cmdline-tools.zip
           rm cmdline-tools.zip
-          rm -rf $ANDROID_HOME/cmdline-tools/latest
           mv cmdline-tools $ANDROID_HOME/cmdline-tools/latest
 
-      - name: Accept Android SDK licenses
-        shell: bash
-        env:
-          PATH: ${{ env.ANDROID_HOME }}/cmdline-tools/latest/bin:$PATH
-          ANDROID_HOME: ${{ env.ANDROID_HOME }}
+      - name: Accept SDK licenses
         run: |
-          yes_cmd() { for i in {1..25}; do echo y; done; }
-          yes_cmd | sdkmanager --sdk_root=$ANDROID_HOME --licenses || true
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME --licenses || true
 
       - name: Install SDK packages
-        shell: bash
-        env:
-          PATH: ${{ env.ANDROID_HOME }}/cmdline-tools/latest/bin:${{ env.ANDROID_HOME }}/platform-tools:$PATH
-          ANDROID_HOME: ${{ env.ANDROID_HOME }}
         run: |
-          sdkmanager --sdk_root=$ANDROID_HOME "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME \
+            "platform-tools" "platforms;android-33" "build-tools;33.0.2"
 
-      - name: Verify tools installed
-        shell: bash
-        run: |
-          git --version
-          cython3 --version
-          java -version
-          sdkmanager --version
-
-      - name: Build APK with Buildozer
-        shell: bash
-        env:
-          PATH: /home/runner/.local/bin:$PATH
-          ANDROID_HOME: ${{ env.ANDROID_HOME }}
+      - name: Build APK
         run: |
           ~/.local/bin/buildozer android debug
