--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,10 @@ jobs:
         run: |
           apt-get update
           DEBIAN_FRONTEND=noninteractive apt-get install -y \
-            openjdk-11-jdk unzip wget git python3-pip python3-setuptools \
-            cython3 build-essential zip zlib1g-dev libncurses-dev \
-            libffi-dev bash curl coreutils sudo
+          openjdk-11-jdk unzip wget git python3-pip python3-setuptools \
+          cython3 build-essential zip zlib1g-dev libncurses-dev \
+          libffi-dev bash curl coreutils
+
 
       - name: Checkout source code
         uses: actions/checkout@v3
